--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
     <hr class="" >
 
-    <main>
+  <main>
         <section>
             <div class="container">
                 <ul id="catagory" class="d-flex justify-content-between" ms-auto>
@@ -62,7 +62,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel"></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div id="modal-text" class="modal-body">
@@ -75,7 +75,7 @@
             </div>
           </div>
         </div>
-    </main>
+  </main>
 
 
 
