--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="./index.html">News</a>
+                    <a class="nav-link active" href="./index.html">News</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./blog.html">Blog</a>
