--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     
+
+
+
     <nav class="navbar navbar-expand-lg">
             <div class="container">
               <a class="navbar-brand p-1" href="#">News Agency</a>
@@ -35,13 +38,17 @@
     <hr class="" >
 
   <main>
-        <section>
+        <section >
             <div class="container">
-                <ul id="catagory" class="d-flex justify-content-between" ms-auto>
+                <ul id="catagory" >
                  
                 </ul>
             </div>
         </section>
+
+        <div id="total_news" class="container">
+          <p id="news_found"></p>
+        </div>
 
 
         <section>
@@ -74,6 +81,20 @@
             </div>
           </div>
         </div>
+
+
+
+
+
+
+        <!-- spinners -->
+        <div id="lodder" class="spinners d-none">
+          <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
+              <div class="spinner-border text-success" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>
+      </div>
   </main>
 
 
