--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
         </section>
 
-        <div id="total_news" class="container">
-          <p id="news_found"></p>
+        <div id="total-news" class="container">
+          <p id="news-found"></p>
         </div>
 
 
